--- a/src/components/MainHead.astro
+++ b/src/components/MainHead.astro
@@ -1,13 +1,12 @@
 ---
 import content from "../content";
-import "../styles/global.css"
+import "../styles/global.css";
 
 const { title, description, image = true } = Astro.props;
 const canonical = new URL(Astro.url.pathname, Astro.site).href;
 ---
 
 <title>{title ? `${title} | ` : ""}Danilo Woznica</title>
-
 
 <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 <meta charset="utf-8" />
@@ -22,11 +21,15 @@ const canonical = new URL(Astro.url.pathname, Astro.site).href;
 <meta property="og:url" content={canonical} />
 <meta property="og:type" content="blog" />
 <meta property="og:title" content={title || content.seo.site} />
-<meta property="og:description" content={description || content.seo.description}
+<meta
+  property="og:description"
+  content={description || content.seo.description}
 />
-{image && (
-  <meta property="og:image" content="https://danilowoz.com/share-new.png" />
-)}
+{
+  image && (
+    <meta property="og:image" content="https://danilowoz.com/share-new.png" />
+  )
+}
 <meta property="og:image:alt" content="@danilowoz" />
 <meta property="og:image:width" content="600" />
 <meta property="og:image:height" content="315" />
