--- a/src/layout/post.astro
+++ b/src/layout/post.astro
@@ -217,6 +217,25 @@ const formatDate = (string) => {
           white-space: nowrap;
         }
 
+        blockquote {
+          font-size: var(--text-size-xlarge);
+          line-height: 1.4;
+          font-family: var(--serif);
+          margin: 1em 2em 1em 2em;
+
+          
+          span {
+    color: var(--surface-2);
+          display: block;
+          font-size: var(--text-size-large);
+          margin-top: var(--unit);
+          }
+
+          @media screen and (min-width: 800px) {
+            margin: 1em -4em 1em 3em;
+          }
+        }
+
         --color-text: var(--surface-0);
         --color-background: #ffffff;
         --token-constant: var(--color-brand);
