--- a/src/styles/_vars.css
+++ b/src/styles/_vars.css
@@ -1,6 +1,6 @@
 @import url("https://fonts.googleapis.com/css2?family=Domine&family=Inter:wght@400;500&display=swap");
 
-:root {
+main {
   /* Spacing */
   --unit: 1rem;
 
@@ -9,7 +9,9 @@
   --surface-1: #535353;
   --surface-2: #767676;
   --surface-3: #f5f5f5;
+  --background: #fff;
   --color-brand: #003dee;
+  --highlight: rgba(255, 225, 0, 0.3);
 
   /* Types */
   --text-size-xlarge: calc(var(--unit) * 1.5);
@@ -23,21 +25,33 @@
 
   /* Misc */
   --transition: 0.2s ease;
+
+  font-family: var(--sans-serif);
+  color: var(--surface-0);
+  background: var(--background);
 }
 
 @media screen and (min-width: 800px) {
-  :root {
+  main {
     --text-size-xlarge: calc(var(--unit) * 2);
     --text-size-large: calc(var(--unit) * 1.5);
   }
 }
 
+*::selection {
+  background-color: var(--highlight);
+}
+
+strong {
+  font-weight: normal;
+  background-color: var(--highlight);
+  color: inherit;
+}
+
 html,
 body {
   font-size: 16px;
-  color: var(--surface-0);
   line-height: 1.43;
-  font-family: var(--sans-serif);
   font-weight: normal;
   scroll-behavior: smooth;
   image-rendering: -webkit-optimize-contrast;
