--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -44,7 +44,6 @@ const experiments = allData.filter(
 
     <main class="container grid">
       <Hero />
-      <Headroom />
 
       <Section title="Writing" data={articles} />
       <Section title="Experiments" data={experiments} vertical />
@@ -55,7 +54,49 @@ const experiments = allData.filter(
       <Footer />
     </main>
     <style lang="scss">
+      @media screen and (min-width: 800px) {
+        body:before {
+          content: "";
+          position: absolute;
+          left: 0;
+          top: 0;
+          right: 0;
+          z-indez: -1;
+          height: 1000px;
+          filter: contrast(220%) brightness(2300%) grayscale(1);
+          opacity: 0.2;
+          background: linear-gradient(
+              180deg,
+              rgba(0, 0, 255, 0.3) 0%,
+              rgba(0, 0, 255, 0.2) 100%
+            ),
+            url("data:image/svg+xml,%3Csvg viewBox='0 0 2000 2000' xmlns='http://www.w3.org/2000/svg'%3E%3Cfilter id='noiseFilter'%3E%3CfeTurbulence type='fractalNoise' baseFrequency='9.8' numOctaves='3' stitchTiles='stitch'/%3E%3C/filter%3E%3Crect width='100%25' height='100%25' filter='url(%23noiseFilter)'/%3E%3C/svg%3E");
+        }
+
+        body:after {
+          content: "";
+          position: absolute;
+          left: 0;
+          top: 0;
+          right: 0;
+          z-indez: -1;
+          height: 1000px;
+          background: linear-gradient(
+              180deg,
+              rgba(255, 255, 255, 0) 25%,
+              rgba(255, 255, 255, 1) 100%
+            ),
+            radial-gradient(
+              circle at 40% 50%,
+              rgba(0, 0, 0, 0) 50%,
+              rgba(0, 0, 0, 0.1)
+            );
+        }
+      }
+
       .grid {
+        position: relative;
+        z-index: 1;
         padding-top: calc(var(--unit) * 1);
         padding-bottom: calc(var(--unit) * 1);
       }
@@ -71,6 +112,7 @@ const experiments = allData.filter(
         top: 1em;
         right: 1em;
         opacity: 0;
+        z-index: 9;
 
         transition: all var(--transition);
         cursor: pointer;
