--- a/src/components/Hero.astro
+++ b/src/components/Hero.astro
@@ -15,13 +15,14 @@ import content from "../content";
     <div class="hero_social">
       <Social />
     </div>
+
+    <img class="hero_img" src="/images/cover.png" />
   </div>
 </header>
 
 <style lang="scss">
   .hero {
     margin-bottom: 33%;
-    background: white;
     position: relative;
     z-index: 99;
   }
@@ -57,6 +58,13 @@ import content from "../content";
     display: flex;
     align-items: center;
     color: var(--surface-1);
+  }
+
+  .hero_img {
+    position: absolute;
+    height: 100%;
+    top: calc(var(--unit) * -6);
+    right: calc(var(--unit) * -10);
   }
 
   @media screen and (min-width: 800px) {
