--- a/src/components/Section.astro
+++ b/src/components/Section.astro
@@ -209,6 +209,8 @@ const formatDate = (string) => {
         pointer-events: none;
         transition: all 0.5s cubic-bezier(0.2, 1, 0.2, 1);
         border: 1px solid var(--surface-0);
+
+        box-shadow: inset 0px 0px 0px 1px rgba(255, 255, 255, 0.4);
       }
     }
 
