--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -70,7 +70,7 @@ const experiments = allData.filter(
               rgba(0, 0, 255, 0.3) 0%,
               rgba(0, 0, 255, 0.2) 100%
             ),
-            url("data:image/svg+xml,%3Csvg viewBox='0 0 2000 2000' xmlns='http://www.w3.org/2000/svg'%3E%3Cfilter id='noiseFilter'%3E%3CfeTurbulence type='fractalNoise' baseFrequency='9.8' numOctaves='3' stitchTiles='stitch'/%3E%3C/filter%3E%3Crect width='100%25' height='100%25' filter='url(%23noiseFilter)'/%3E%3C/svg%3E");
+            url("data:image/svg+xml,%3Csvg viewBox='0 0 2000 2000' xmlns='http://www.w3.org/2000/svg'%3E%3Cfilter id='noiseFilter'%3E%3CfeTurbulence type='fractalNoise' baseFrequency='0.8' numOctaves='4' stitchTiles='stitch'/%3E%3C/filter%3E%3Crect width='100%25' height='100%25' filter='url(%23noiseFilter)'/%3E%3C/svg%3E");
         }
 
         body:after {
@@ -85,6 +85,11 @@ const experiments = allData.filter(
               180deg,
               rgba(255, 255, 255, 0) 25%,
               rgba(255, 255, 255, 1) 100%
+            ),
+            radial-gradient(
+              circle at 40% 50%,
+              rgba(255, 255, 255, 0.7) 20%,
+              rgba(255, 255, 255, 0)
             ),
             radial-gradient(
               circle at 40% 50%,
