--- a/src/components/About.astro
+++ b/src/components/About.astro
@@ -1,6 +1,6 @@
 <section class="section grid" id="about-me">
   <div class="about_img">
-    <img src="/images/cover.png" />
+    <img src="/images/cover.jpg" />
   </div>
   <article>
     <h2 class="type_main">About me</h2>
@@ -58,7 +58,7 @@
 
       img {
         width: 100%;
-        margin-left: calc(-4 * var(--unit));
+        margin-left: calc(-2 * var(--unit));
       }
     }
   }
