--- a/src/components/Section.astro
+++ b/src/components/Section.astro
@@ -128,6 +128,8 @@ const formatDate = (string) => {
     .type_main {
       grid-column: 1/2;
       margin: 0;
+      line-height: 1;
+      margin-top: calc(var(--unit) * -0.5);
 
       &.sticky {
         position: sticky;
