--- a/src/components/MainHead.astro
+++ b/src/components/MainHead.astro
@@ -10,7 +10,12 @@ const canonical = new URL(Astro.url.pathname, Astro.site).href;
 
 <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 <meta charset="utf-8" />
-<link rel="preconnect" href="https://fonts.gstatic.com" />
+<link rel="preconnect" href="https://fonts.googleapis.com" />
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+<link
+  href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500&family=Merriweather&display=swap"
+  rel="stylesheet"
+/>
 
 <meta name="description" content={description || content.seo.description} />
 
