--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -15,13 +15,10 @@ const allData = blogsMd.sort((a, b) => {
 
 const contentMd = await Astro.glob("../content/*.md");
 const projects = contentMd.sort((a, b) => {
-  if (a.order < b.order) {
-    return -1;
-  }
-  if (a.order > b.order) {
-    return 1;
-  }
-  return 0;
+  const dateA = new Date(a?.frontmatter.date ?? "").getTime();
+  const dateB = new Date(b?.frontmatter.date ?? "").getTime();
+
+  return dateB - dateA;
 });
 
 const articles = allData.filter(
