--- a/src/layout/post.astro
+++ b/src/layout/post.astro
@@ -53,7 +53,7 @@ const formatDate = (string) => {
         <Footer />
       </article>
     </div>
-    <style lang="scss" global>
+    <style lang="scss" is:global>
       .overflow {
         width: 100vw;
         overflow-x: hidden;
