--- a/src/components/MainHead.astro
+++ b/src/components/MainHead.astro
@@ -2,7 +2,7 @@
 import content from "../content";
 import "../styles/global.css";
 
-const { title, description, image = true } = Astro.props;
+const { title, description, url } = Astro.props;
 const canonical = new URL(Astro.url.pathname, Astro.site).href;
 ---
 
@@ -30,11 +30,15 @@ const canonical = new URL(Astro.url.pathname, Astro.site).href;
   property="og:description"
   content={description || content.seo.description}
 />
-{
-  image && (
-    <meta property="og:image" content="https://danilowoz.com/share-new.png" />
-  )
-}
+
+<meta
+  property="og:image"
+  content={`https://danilowoz.com${Astro.url.pathname.replace(
+    "/blog",
+    ""
+  )}/og-image.png`}
+/>
+
 <meta property="og:image:alt" content="@danilowoz" />
 <meta property="og:image:width" content="600" />
 <meta property="og:image:height" content="315" />
