--- a/src/components/Section.astro
+++ b/src/components/Section.astro
@@ -41,9 +41,9 @@ const formatDate = (string) => {
               <article class="list-article">
                 <h1 class={`type_headline`}>
                   {item.frontmatter.title}{" "}
-                  {item.frontmatter.tag && (
+                  {/*item.frontmatter.tag && (
                     <span class="type_footnote">{item.frontmatter.tag}</span>
-                  )}
+                  ) */}
                 </h1>
                 <p class="surface-1">{item.frontmatter.tagline}</p>
                 <p class="type_footnote">{renderCallToAction()}</p>
