--- a/src/layout/post.astro
+++ b/src/layout/post.astro
@@ -217,6 +217,16 @@ const formatDate = (string) => {
           white-space: nowrap;
         }
 
+        figure img {
+          border: 1px solid var(--surface-3);
+        }
+
+        figcaption {
+          text-align: center;
+          font-size: var(--text-size-small);
+          margin-bottom: var(--unit);
+        }
+
         blockquote {
           font-size: var(--text-size-xlarge);
           line-height: 1.4;
