--- a/src/components/Hero.astro
+++ b/src/components/Hero.astro
@@ -38,7 +38,7 @@ import content from "../content";
   .type_main:before {
     content: "";
     position: absolute;
-    background: url("/assets/quoting.png") center center;
+    background: url("/assets/cursor.png") center center;
     background-size: cover;
 
     width: calc(var(--unit) * 1);
