--- a/src/layout/post.astro
+++ b/src/layout/post.astro
@@ -169,6 +169,10 @@ const formatDate = (string) => {
             margin-left: calc(var(--unit) * 6);
             margin-right: 0;
           }
+
+          @media (prefers-color-scheme: dark) {
+            mix-blend-mode: color-burn;
+          }
         }
       }
 
