--- a/src/styles/_vars.css
+++ b/src/styles/_vars.css
@@ -37,11 +37,11 @@ strong {
 
 @media (prefers-color-scheme: dark) {
   :root {
-    --surface-0: rgba(253, 253, 255, 0.93);
-    --surface-1: rgba(247, 245, 255, 0.616);
-    --surface-2: rgba(240, 238, 255, 0.48);
-    --surface-3: rgba(238, 236, 255, 0.416);
-    --background: rgb(22, 22, 24);
+    --surface-0: hsl(0 0% 93%);
+    --surface-1: hsl(0 0% 62.8%);
+    --surface-2: hsl(0 0% 49.4%);
+    --surface-3: hsl(0 0% 43.9%);
+    --background: hsl(0 0% 8.5%);
     --highlight: #4e7bff29;
     --color-brand: #4e7bff;
   }
