--- a/src/layout/post.astro
+++ b/src/layout/post.astro
@@ -221,7 +221,7 @@ const formatDate = (string) => {
         }
 
         table th {
-          border-bottom: 1px solid var(--surface-1);
+          text-align: left;
           padding: calc(var(--unit) * 0.4);
         }
 
