style: Fixed typo in Social component title
Fixed typo in title attribute value of the Social component in Astro file

--- a/src/components/Social.astro
+++ b/src/components/Social.astro
@@ -2,7 +2,7 @@
   href="https://github.com/danilowoz"
   target="_blank"
   rel="noreferrer"
-  title="Link to Github"
+  title="Link to GitHub"
 >
   <svg
     viewBox="0 0 256 250"
