--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -5,12 +5,12 @@ import Cards from "../components/Cards.astro";
 import About from "../components/About.astro";
 import Footer from "../components/Footer.astro";
 import MainHead from "../components/MainHead.astro";
-import List from "../components/List.astro"
+import List from "../components/List.astro";
 
 const blogsMd = await Astro.glob("./blog/*.md");
 const contentMd = await Astro.glob("../content/*.md");
 
-const content = [...blogsMd,...contentMd]
+const content = [...blogsMd, ...contentMd]
   .sort((a, b) => {
     const dateA = new Date(a?.frontmatter.date ?? "").getTime();
     const dateB = new Date(b?.frontmatter.date ?? "").getTime();
@@ -38,12 +38,11 @@ const articles = content.filter(
       <Hero />
 
       <Section title="Writing">
-      <List data={articles}  />
+        <List data={articles} />
       </Section>
       <Section title="Projects">
-      <Cards data={projects} />
+        <Cards data={projects} />
       </Section>
-      
 
       <About />
 
